@@ -21,14 +21,14 @@
 	  <br><br>
 	  <table cellpadding=5>
 		  <tr><td>
-				  <b> Destination IP Address</b></td><td><tt> www.yaddnet.org</tt></td></tr>
+				  <b> Destination IP Address</b></td><td> <font  face=monospace color=black size='4pt'> www.yaddnet.org</font></td></tr>
 		  <tr><td>
-				  <b>Destination Port</b></td><td><tt>4530</tt></td></tr>
+				  <b>Destination Port</b></td><td> <font  face=monospace color=black size='4pt'>4530</font></td></tr>
 		  <tr><td>
-				  <b>Source Identification</b></td><td><tt> RXID Freq</tt></td></tr>
+				  <b>Source Identification</b></td><td> <font  face=monospace color=black size='4pt'> RXID Freq</font></td></tr>
 				  
 		  <tr><td>
-				  <b>Source Port</b></td><td><tt>4531</tt> (not important)</td></tr>
+				  <b>Source Port</b></td><td> <font  face=monospace color=black size='4pt'>4531</font> (not generally important unless you need to specify a source port for your own firewall settings)</td></tr>
 	  </table>
 	  <br><br>
 	  Picture shows <b><i>MY</b></i> RXID as an example, please don't use the same!<br><br>
@@ -46,7 +46,7 @@
 	  <br>
 		  <b>THE FREQUENCY MUST BE IN kHz with the appropriate DECIMAL place</b> <br>
 		  Don't forget to add the <b><i>"dot zero"</i></b> where appropriate!<br><br>
-	  <ul>	 
+	  <ul>	 <font  face=monospace color=black size='4pt'> 
 	  	  <li>2177.0</li>
 		  <li>2187.5</li>
 		  <li>4207.5</li>
@@ -55,6 +55,7 @@
 		  <li>12577.0</li>
 		  <li>16804.5</li>
 		  <li>156525.0</li>
+		  </font>
 	  </ul>
 	  <br>
 	  <br>
